--- a/ICEChecker/ModuleICEData/Views/ICETCApiView.xaml
+++ b/ICEChecker/ModuleICEData/Views/ICETCApiView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ICEChecker.ModuleICEData.Views.ICETCApiView"
+<UserControl x:Class="ICEChecker.ModuleICEData.Views.ICETCApiView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
